--- a/source-css/mlas1party.css
+++ b/source-css/mlas1party.css
@@ -28,7 +28,7 @@ a.author[href$="EvanMacIan"] {
     display: inline-block
     }
 a.author[href$="EvanMacIan"]:before { 
-        content: "Krashie";
+        content: "Ewan McGregor";
         font-size: 10px !important;
     visibility: visible !important;
     overflow: hidden
