--- a/source-css/mylittlealcoholic.css
+++ b/source-css/mylittlealcoholic.css
@@ -7,7 +7,7 @@
 }
 
 .titlebox .users-online span.number:after{
-    content: " Getting drunk"
+    content: " Getting Clopfaced"
 }
 
 .usertext-body td{
