--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -561,6 +561,22 @@ a[href|="/pplipbite"] {
     height: 111px;
     background-image: url(%%pplipbite%%) 
     }
+a[href|="/twilipbite"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 149px;
+    height: 150px;
+    background-image: url(%%twilight-human-face%%) 
+    }
+a[href|="/bghuman"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 132px;
+    height: 131px;
+    background-image: url(%%bghuman%%) 
+    }
 
 
 
