--- a/source-css/pwettypwinkpwincesses.css
+++ b/source-css/pwettypwinkpwincesses.css
@@ -600,3 +600,13 @@ a[href|="/tulpa"] {
   width:200px;
   height:150px;
 }
+
+a[href|="/awakedash"] {
+  background-image: url(%%awakedash%%);
+  display:block;
+  clear:none;
+  float:left;
+  width:194px;
+  height:200px;
+}
+
