--- a/source-css/thepleasurehub.css
+++ b/source-css/thepleasurehub.css
@@ -1,4 +1,3 @@
-
 div.titlebox span.word {
     display: none;
     }
@@ -57,7 +56,7 @@ div.titlebox .users-online span.number:after {
 
 
 body {
-    background: url('%%skybackground%%') no-repeat fixed bottom center !important;
+    background: url('%%pleasurehubbg%%') no-repeat fixed bottom center !important;
     background-color:black !important;
 } 
 
