--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -1,10 +1,10 @@
-/*Most bits of these CSS are stolen from Plounge */
+/*Nothing fancy here, now shoo.*/
 
 div.titlebox span.word {display:none}
 div.titlebox .subscribers span.number:after {content:" Spikes"}
 div.titlebox .users-online span.number:after {content:" Spiking"}
 
-
+/*Header sticking on the "ground"*/
 #header-img
 {
  margin:5px 3px -3px 0px;
@@ -29,7 +29,7 @@ background: url(%%Alwayswatching%%)
 no-repeat fixed center center
 }
 
-/*Ponymote (CSS stolen from AnotherPonymotesSub, whose Gwingle stole it from plounge)*/
+/*Ponymotes*/
 
 a[href="/spikehmph"] {
 background-position: 0px 0px;
@@ -80,4 +80,9 @@ Float: left;
 Width: 70px;
 Height: 70px;
 background-image: url(%%rdwut%%) !important
+}
+
+a[href="/sp"] {
+    display:inline-block;
+    padding-right:100%
 }
