--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -291,14 +291,7 @@ a[href|="/colno"] {
     background-image:url(%%colno%%)
 }
 
-a[href|="/colgatongue"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 160px;
-    height: 218px;
-    background-image:url(%%colgatongue%%)
-}
+
 
 a[href|="/colgateworry"] {
     display: block;
@@ -418,13 +411,556 @@ a[href|="/colgatepunchsnuggle"] {
     background-image:url(%%colgatepunchsnuggle%%)
 }
 
-a[href|="/yummybrush"] {
+
+
+a[href|="/trixshimmer"] {
     display: block;
     clear: none;
     float: left;
-    width: 180px;
+    width: 300px;
+    height: 140px;
+    background-position: 0px  0px; 
+    background-image:url(%%spritesheet1%%)
+}
+
+a[href|="/trixievoila"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 145px;
+    height: 200px;
+    background-position: 0px  -140px; 
+    background-image:url(%%spritesheet1%%)
+}
+
+a[href|="/sunsetproud"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 195px;
+    background-position: 0px  -344px; 
+    background-image:url(%%spritesheet1%%)
+}
+
+a[href|="/sunsetcozy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 203px;
+    background-position: 0px  -540px; 
+    background-image:url(%%spritesheet1%%)
+}
+
+a[href|="/sunsetsad"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 173px;
+    height: 191px;
+    background-position: 0px  -742px; 
+    background-image:url(%%spritesheet1%%)
+}
+a[href|="/shimmergrin"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 178px;
+    height: 197px;
+    background-position: 0px  -939px; 
+    background-image:url(%%spritesheet1%%)
+}
+a[href|="/sadshimmer"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 215px;
+    height: 190px;
+    background-position: 0px  -1135px; 
+    background-image:url(%%spritesheet1%%)
+}
+
+a[href|="/fillyshimmer"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 190px;
+    height: 197px;
+    background-position: 0px  -1326px; 
+    background-image:url(%%spritesheet1%%)
+}
+
+a[href|="/chibishimmer"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 209px;
+    background-position: 0px  -1526px; 
+    background-image:url(%%spritesheet1%%)
+}
+a[href|="/trixiehat"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 120px;
+    height: 204px;
+    background-position: 0px  0px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixiecuddle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 139px;
+    background-position: 0px  -198px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixieflirt"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 225px;
+    height: 200px;
+    background-position: 0px  -370px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixienap"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 185px;
+    background-position: 0px  -560px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixieshare"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 260px;
+    height: 127px;
+    background-position: 0px  -740px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixieevil"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 250px;
+    height: 162px;
+    background-position: 0px  -855px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixiesocks"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 266px;
+    height: 139px;
+    background-position: 0px  -1018px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixiemouthcuddle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 250px;
+    height: 150px;
+    background-position: 0px  -1180px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+
+a[href|="/twitail"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 173px;
+    background-position: 0px  -1328px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/twixiegenie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 260px;
+    height: 262px;
+    background-position: 0px  -1500px; 
+    background-image:url(%%spritesheet2%%)
+}
+
+a[href|="/angrybelle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 175px;
+    height: 165px;
+    background-position: 0px  0px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+
+a[href|="/deviousbelle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 163px;
+    height: 205px;
+    background-position: 0px  -165px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+
+a[href|="/poutybelle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 168px;
+    height: 202px;
+    background-position: 0px  -371px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/scootybelle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 173px;
+    height: 215px;
+    background-position: 0px  -574px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/snootybelle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 166px;
+    height: 182px;
+    background-position: 0px  -789px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/sweetiehappy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 166px;
+    height: 210px;
+    background-position: 0px  -970px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/sweetiemagic"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 168px;
+    height: 185px;
+    background-position: 0px  -1180px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/sweetieomg"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 170px;
+    height: 194px;
+    background-position: 0px  -1361px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/sweetiereach"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 166px;
+    height: 190px;
+    background-position: 0px  -1552px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/sweetiewat"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 165px;
+    height: 168px;
+    background-position: 0px  -1740px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/seahatake"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 244px;
+    height: 170px;
+    background-position: 0px  -1910px; 
+    background-image:url(%%spritesheet3%%)
+}
+
+a[href|="/twinervous"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
+    height: 195px;
+    background-position: 0px  0px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/huggytwi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 195px;
+    height: 195px;
+    background-position: 0px  -195px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/readingtwi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 195px;
+    height: 118px;
+    background-position: 0px  -398px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/twitiahug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 275px;
+    height: 136px;
+    background-position: 0px  -517px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/morningtwi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 169px;
+    height: 242px;
+    background-position: 0px  -657px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+
+a[href|="/lunatwihug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 218px;
+    height: 134px;
+    background-position: 0px  -903px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/twilightwantshuggy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 206px;
+    background-position: 0px  -1037px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/coffeetwi"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 197px;
+    height: 192px;
+    background-position: 0px  -1245px; 
+    background-image:url(%%spritesheet4%%)
+}
+a[href|="/twipout"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 186px;
+    background-position: 0px  -1439px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/twibummed"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 195px;
+    height: 122px;
+    background-position: 0px  -1626px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/twicheer"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 192px;
+    height: 172px;
+    background-position: 0px  -1750px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/twilightissohappy"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 188px;
+    height: 172px;
+    background-position: -5px  -1924px; 
+    background-image:url(%%spritesheet4%%)
+}
+
+a[href|="/amusedlyra"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 195px;
+    background-position: 0px  0px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/angrylyra"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 255px;
+    height: 144px;
+    background-position: 0px  -194px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyrabeam"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 197px;
+    height: 195px;
+    background-position: 0px  -338px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyrablush"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 186px;
+    height: 197px;
+    background-position: -3px  -535px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyrabontango"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 155px;
+    background-position: 0px  -732px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyraevil"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 220px;
+    height: 208px;
+    background-position: 0px  -885px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyrafoundyourstash"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 195px;
+    height: 165px;
+    background-position: 0px  -1094px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyragimme"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 197px;
+    height: 194px;
+    background-position: 0px  -1260px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyrahasbon"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 160px;
     height: 218px;
-    background-image:url(%%yummybrush%%)
+    background-position: 0px  -1455px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyrasleep"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 197px;
+    height: 141px;
+    background-position: 0px  -1674px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/lyricorn"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 156px;
+    height: 207px;
+    background-position: 0px  -1816px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/ninjalyra"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 214px;
+    height: 131px;
+    background-position: 0px  -2021px; 
+    background-image:url(%%spritesheet5%%)
+}
+
+a[href|="/socklyra"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 217px;
+    height: 108px;
+    background-position: 0px  -2148px; 
+    background-image:url(%%spritesheet5%%)
 }
 
 div.titlebox span.word {display:none; }
