--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -897,3 +897,4 @@ body.res-nightmode:first-of-type .flair { background-color: transparent!importan
 .flair-nerdyflair {width:30px; height:30px; background-position: -50px -20px}
 .flair-badcard {width:18px; height:20px; background-position: -50px 0px}
 .flair-nonet {width:25px; height:25px; background-position: -50px -50px}
+.flair-clock {background-image: url(%%clockflair%%);width:30px; height:30px; background-position: 0px 0px}
