--- a/source-css/mylittleandysonic1.css
+++ b/source-css/mylittleandysonic1.css
@@ -2,12 +2,12 @@
 
 /* Changes background  */
 body:first-of-type, body.res-nightmode:first-of-type {
-    background:  url(%%1Untitsled%%)  no-repeat  fixed 60% 100% !important;
+    background:  url(%%animebackground1%%)  no-repeat  fixed 60% 100% !important;
 }
 
 /* Banner image and associated height values */
  #header #header-bottom-left {
-   background: url(%%bannera%%)!important;
+   background: url(%%animebanner1a%%)!important;
    background-repeat: no-repeat!important;
    background-position: 50% 100%!important;
    height: 237px; /* 237 for meat's nice banner and general banner size */
@@ -16,7 +16,7 @@ body:first-of-type, body.res-nightmode:first-of-type {
 
 
 #header-img-a {
-    margin-top: 32px;
+    margin-top: 220px;
     margin-left: 15px;
 }
 
